Optimize hot ingredient paths
Backport the portable Optional/Stream hot-path optimizations to the 1.18 branch.

IRecipeSlotView is non-extendable, so its list accessor is added as an abstract method; JEI's RecipeSlot implementation provides the optimized nullable/list-based path directly. The target-only IIngredientManager#getIngredientTypeOrNull name preserves the deprecated 1.18 method's compatibility contract while avoiding Optional allocation internally. This also includes the portable typed base-ingredient helper and the related e10b47c374c3b46c528b84a4f265eedf43e5f6b4 optimizations.

The newer 1.21 object-UID subtype API remains out of scope for this adaptation.

(cherry picked from commit 6712a3c25fe7c5c10bc3d6b1a3b65b0ed7886ba0)